--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="Default">
+<html lang="fr">
 <head>
     <meta charset="utf-8">
     <!--<meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">-->
@@ -124,7 +124,11 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
+				<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />-->
+				<p class="citation">
+					"La chouette agence est une exellente agence web! Les web designers ont réussi à capturer l 'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lyon à lyon"
+				</p>
+				<q>	Maxime Guibard, PDG de A vos fourchettes</q>
 
 			</div>
 		</div>
@@ -245,7 +249,7 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					<!--<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
@@ -257,7 +261,7 @@
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
 					</div>
-					<div class="col-sm-4">
+					<!--<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
@@ -284,7 +288,7 @@
 							<li><a href="remontersurgoogle.com">remontersurgoogle.com</a></li>
 							<li><a href="vraiseofiable.com">vraiseofiable.com</a></li>
 						</ul>
-					</div>
+					</div>-->
 				</div>
 			</div>
 		</div>
