--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+				<img src="img/logoChouette.png" class="center-block image-resize-mode" width="100" alt="agence web marketing lyon chouette agence" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<img alt="creation de site internet lyon chouette agence" src="img/title.png" />
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -159,9 +159,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />-->
-				<p>Nous travaillons avec beaucoup de clients,
-					voici nos réalisations.
-				</p>
+				<p class="realisations">Nous travaillons avec beaucoup de clients,voici nos réalisations.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
@@ -258,7 +256,7 @@
 					<div class="col-sm-4">
 						Partenaires
 							<ul>
-								<li><a href="voiture.com">voiture.com</a></li>
+								<li><a href="voiture.com">voiture.com </a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
 								<li><a href="matoiture.com">matoiture.com</a></li>
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
