--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<!--<img alt="creation de site internet lyon chouette agence" src="img/title.png" />-->
-				<p>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</p>
+				<p class="visible">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
