--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 					<!--<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				</div>
 				<div class="row">
-					<div class="col-sm-4">
+					<!--<div class="col-sm-4">
 						Partenaires
 							<ul>
 								<li><a href="voiture.com">voiture.com </a></li>
@@ -262,7 +262,7 @@
 								<li><a href="matoiture.com">matoiture.com</a></li>
 								<li><a href="immobilierseo.com">immobilierseo.com</a></li>
 							</ul>		
-					</div>
+					</div>-->
 					<!--<div class="col-sm-4">
 						Annuaires liste 1
 						<ul>
