--- a/index.html
+++ b/index.html
@@ -7,16 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
 	
-	<script src="./js/jquery-2.1.0.min.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/blocs.min.js"></script>
-	<script src="./js/jqBootstrapValidation.js"></script>
-	<script src="./js/formHandler.js"></script>
+	
 
     <title>agence web lyon</title>
 
@@ -39,7 +35,7 @@
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
 				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="agence web lyon" height="40" /></a>
 				<!--<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>-->
-				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
+				<!--<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">-->
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
 			</div>
@@ -125,10 +121,9 @@
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<!--<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />-->
-				<p class="citation">
-					"La chouette agence est une exellente agence web! Les web designers ont réussi à capturer l 'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lyon à lyon"
-				</p>
-				<q>	Maxime Guibard, PDG de A vos fourchettes</q>
+				<q class="citation">
+					"La chouette agence est une exellente agence web! Les web designers ont réussi à capturer l 'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en lyon à lyon"</q><br>
+				<p class="auteur">	Maxime Guibard, PDG de A vos fourchettes</p>
 
 			</div>
 		</div>
@@ -184,7 +179,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/creation-site-voyageur-.png" class="img-responsive portfolio-thumb" alt="agence web meilleure agence, Création d'un site web pour voyageur"/></a>
+				<a href="#" data-lightbox="img/creation-site-voyageur-.png" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/creation-site-voyageur-.png" class="img-responsive portfolio-thumb" alt="agence web meilleure agence, Création d'un site web pour voyageur"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -300,6 +295,10 @@
 </div>
 <!-- Principal conteneur END -->
     
-
+<script src="./js/jquery-2.1.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/blocs.js"></script>
+	<script src="./js/jqBootstrapValidation.js"></script>
+	<script src="./js/formHandler.js"></script>
 </body>
 </html>
