--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		<div class="row">
 			<div class="col-sm-12 text-center">
 				<!--<img alt="creation de site internet lyon chouette agence" src="img/title.png" />-->
-				<p class="visible">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur internet.</p>
+				<p class="visible">Pour devenir <strong>attractive et visible sur internet</strong> <br> <strong>la chouette agence </strong> <br> vous propose de vous accompagner. <br><strong>des professionnels engagés.</strong></p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
