--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="création de site internet lyon, agence de développemnt web">
+    <meta name="description" content="La Chouette Agence, agence de web design à lyon, pour rendre attractive votre entreprise">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -13,7 +13,7 @@
 	
 	
 
-    <title>agence web lyon</title>
+    <title>La Chouette Agence webdesign lyon</title>
 
     
 <!-- Analytics -->
@@ -66,7 +66,8 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="visible">Pour devenir <strong>attractive et visible sur internet</strong> <br> <strong>la chouette agence </strong> <br> vous propose de vous accompagner. <br><strong>des professionnels engagés.</strong></p>
+				<h2>Agence de web design à Lyon</h2>
+				<p class="visible"><strong>La Chouette Agence</strong><br> <strong>aide les entreprises</strong> <br>à devenir <br><strong>attractives et visibles sur internet.</strong></p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
