--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a> <button aria-label="contact" aria-describedby="contact avec l'agence ">contact</button>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="contact" aria-describedby="contact avec l'agence ">Contact</a> 
 				</div>
 			</div>
 		</div>
