--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					La chouette agence.
 				</h1>
 				<div class="text-center">
-					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" <button aria-label="accéder a la page formulaire pour remplir coordonnées et entrer en contact avec l 'agence" aria-describedby="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine">Contact</button></a>
+					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero" aria-label="accéder a la page formulaire pour remplir coordonnées et entrer en contact avec l 'agence">Contact</a>
 				</div>
 			</div>
 		</div>
