--- a/contact.html
+++ b/contact.html
@@ -81,10 +81,10 @@
 						<label for="commentaires">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" required id="commentaires" />
 					</div>
 					<div class="form-group">
-						<label for="messages">
+						<label for="message">
 							Brief de votre projet (Ajoutez autant de détails que nécessaire)<br>
 						</label><textarea id="message" class="form-control" rows="4" cols="50" required></textarea>
 					</div> 
